--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <div id="ccb_app" style="display:none">
         <div id="ccb_screen_1">
             <div id="ccb_large_title"><span onclick="play_ccb_sound()">踩踩背</span>模拟器<br>
-                <button id="play_ccb" onclick="play()">PLAY</button>
+                <button id="play_ccb" onclick="play0()">PLAY</button>
+                <div id="clt_2bt" style="display:none">
+                    <button id="play_ccb" onclick="play1()">经典模式</button><br>
+                    <button id="play_ccb" onclick="play2()">挑战模式</button>
+                </div>
             </div>
         </div>
         <div id="ccb_screen_2" style="display:none">
@@ -34,15 +38,19 @@
             <img id="screen3_img" src="" />
         </div>
         <div id="ccb_screen_4" style="display:none">
-            <img id="screen4_img" src="assets/webp/scene_3.webp" />
-            <img id="screen4_elp" src="assets/webp/elep_2.webp" />
-            <img id="screen4_wow" src="assets/webp/wow.webp" />
+            <img id="screen4_img" src="assets/webp/scene_3.webp" draggable="false"/>
+            <img id="screen4_elp" src="assets/webp/elep_2.webp" draggable="false"/>
+            <img id="screen4_wow" src="assets/webp/wow.webp" draggable="false"/>
         </div>
         <div id="ccb_screen_5" style="display:none">
             <div id="ccb_end_title"><span id="cet_txt"></span><br>
                 <span id="cet_txt2"></span><br>
                 <span id="cet_txt3"></span><br>
                 <button onclick="reset()">重踩</button>
+                <div style="font-size:16px">
+                    <br>
+                    <a style="color:#fff" href="https://wzq02.top/">前往主站</a> | <a style="color:#fff" href="https://github.com/WZQ02/ccb-simulator">源代码</a> | <a style="color:#fff" href="https://wzq02.top/comment/?type=ccbsimu">留言</a>
+                </div>
             </div>
         </div>
         <div id="ccb_noti">
@@ -62,7 +70,7 @@
     </div>
 </body>
 <script>
-    const app_date = "2024/7/1",app_name = "ccb-simulator",app_ver = "0.0.2"
+    const app_date = "2024/8/10",app_name = "ccb-simulator",app_ver = "0.0.3"
     const app = document.getElementById("ccb_app")
     const screen1 = document.getElementById("ccb_screen_1")
     const screen2 = document.getElementById("ccb_screen_2")
@@ -70,13 +78,15 @@
     const screen4 = document.getElementById("ccb_screen_4")
     const screen5 = document.getElementById("ccb_screen_5")
     const progress = document.getElementById("ccb_noti_progress")
-
-    //display app screen only when js is enabled
+    const clt_2bt = document.getElementById("clt_2bt")
+    const play_ccb = document.getElementById("play_ccb")
     app.style = ""
     screen1.style = ""
-
     let ccb_started,ccb_evl1,cb_count=0,first_click_time,last_click_time,score=0,tps,cb_allow,cmi,ptm1,ptm2
-
+    let ccb_game_mode,ccb_cm_level,last10click=[],ccb_lc_doubt=0
+    document.body.addEventListener("contextmenu", (e) => {
+        e.preventDefault();
+    })
     function play() {
         document.getElementById("pic_forload").style.display = "none"
         screen1.style.display = "none"
@@ -146,6 +156,15 @@
             }
         },10)
     }
+    function changecmil(ms,num) {
+        clearInterval(cmi)
+        cmi = setInterval(()=>{
+            progress.value = progress.value - (num || 1)
+            if (progress.value <= 0) {
+                over()
+            }
+        },ms)
+    }
     function ccb_click() {
         if (!cb_allow) {
             return
@@ -156,6 +175,9 @@
             scorec(5)
         } else {
             let tm = Math.pow(last_click_time-Date.now()+1000,2)
+            if (ccb_game_mode == 1) {
+                lct_value_ev()
+            }
             last_click_time = Date.now()
             scorec(Math.ceil(tm/200000))
             tps = Math.floor(cb_count/(last_click_time - first_click_time)*10000)/10
@@ -173,6 +195,27 @@
         cb_count++
         document.getElementById("cnp_txt").innerText = "踩背次数："+cb_count
         progress.value += 40
+        if (ccb_game_mode == 1) {
+            if (score > 2500) {
+                if (ccb_cm_level != 3) {
+                    ccb_cm_level = 3
+                    genscorec_text("2500分！加速x4！",1)
+                    changecmil(10,4)
+                }
+            } else if (score > 1000) {
+                if (ccb_cm_level != 2) {
+                    ccb_cm_level = 2
+                    genscorec_text("1000分！加速x3！",1)
+                    changecmil(10,3)
+                }
+            } else if (score > 500) {
+                if (ccb_cm_level != 1) {
+                    ccb_cm_level = 1
+                    genscorec_text("500分！加速x2！",1)
+                    changecmil(10,2)
+                }
+            }
+        }
     }
     function gen_audio_el(url,removeafter) {
         const el = document.createElement("audio")
@@ -203,19 +246,30 @@
     }
     function scorec(value) {
         score += value
+        genscorec_text("+"+value)
+    }
+    function genscorec_text(str,type) {
         const ss = document.createElement("span")
         ss.className = "score_show"
-        ss.innerText = "+"+value
+        let ss_time = 500
+        if (type) {
+            ss.classList.add("slow")
+            ss_time = 2000
+        }
+        ss.innerText = str
         document.body.appendChild(ss)
         setTimeout(()=>{
             document.body.removeChild(ss)
-        },500)
+        },ss_time)
     }
     function reset() {
         screen5.style.display = "none"
         screen1.style.display = ""
+        clt_2bt.style.display = "none"
+        play_ccb.style.display = ""
         ccb_started=ccb_evl1=first_click_time=last_click_time=tps=cb_allow=cmi=null
-        cb_count=score=0
+        cb_count=score=ccb_cm_level=ccb_lc_doubt=0
+        last10click=[]
         document.getElementById("screen3_img").style = ""
         document.getElementById("screen4_elp").style = ""
         document.getElementById("screen4_wow").style = ""
@@ -223,6 +277,45 @@
         document.getElementById("cet_txt2").innerText = ""
         document.getElementById("cet_txt3").innerText = ""
         document.getElementById("story1").currentTime = 0
+    }
+    function play0() {
+        clt_2bt.style.display = ""
+        play_ccb.style.display = "none"
+    }
+    function play1() {
+        ccb_game_mode = 0
+        play()
+    }
+    function play2() {
+        ccb_game_mode = 1
+        play()
+    }
+    function lct_value_ev() {
+        if (last10click.length < 10) {
+            last10click[last10click.length] = Date.now() - last_click_time
+        } else {
+            last10click.shift()
+            last10click[9] = Date.now() - last_click_time
+            let l1c_avg = 0,l1c_diff = 0
+            for (i=0;i<10;i++) {
+                l1c_avg += last10click[i]/10
+            }
+            for (i=0;i<10;i++) {
+                l1c_diff += Math.abs(last10click[i] - l1c_avg)
+            }
+            if (l1c_diff < 50) {
+                ccb_lc_doubt++
+                if (ccb_lc_doubt > 3) {
+                    over()
+                    document.getElementById("cet_txt").innerText = "你是不是开了！？"
+                    console.log("挑战模式还想作弊？呵呵！")
+                }
+            } else {
+                if (ccb_lc_doubt > 0) {
+                    ccb_lc_doubt--
+                }
+            }
+        }
     }
     console.log(`${app_name} version ${app_ver}. Last updated ${app_date}.`)
 </script>
