--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>踩踩背模拟器</title>
-    <meta name="viewport" content="user-scalable=no">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="shortcut icon" type="image/png" href="assets/ico/ccb.webp" />
     <link rel="stylesheet" href="index.css" id="skin">
 </head>
@@ -25,8 +24,9 @@
             <div id="ccb_large_title"><span onclick="play_ccb_sound()">踩踩背</span>模拟器<br>
                 <button id="play_ccb" onclick="play0()">PLAY</button>
                 <div id="clt_2bt" style="display:none">
-                    <button id="play_ccb" onclick="play1()">经典模式</button><br>
-                    <button id="play_ccb" onclick="play2()">挑战模式</button>
+                    <button id="play_ccb1" onclick="play1()">经典模式</button><br>
+                    <button id="play_ccb2" onclick="play2()">挑战模式</button><br>
+                    <button id="play_ccb3" onclick="show_s6()" style="display:none">换贴图</button>
                 </div>
             </div>
         </div>
@@ -60,6 +60,25 @@
             </div>
             <div id="ccb_mode_title"></div>
         </div>
+        <div id="ccb_screen_6" style="display:none">
+            <div id="ccb_s6_title">改贴图</div><br>
+            <span id="ccb_s6_title_txt1">注：更换贴图后，请勿将游玩本游戏的视频画面公开发布（虽然我不会追究）。若因此造成侵权问题，作者概不负责。</span><br>
+            <div id="s6_pics">
+                <span>点击下方图片以更改：</span><br>
+                <label for="s4_im_upl">
+                    <span>被踩背前</span><br>
+                    <img id="screen4_img_pre" src="assets/webp/scene_3.webp" width="300"/>
+                </label>
+                <br>
+                <label for="s4_wo_upl">
+                    <span>被踩背后</span><br>
+                    <img id="screen4_wow_pre" src="assets/webp/wow.webp" width="300"/>
+                </label>
+                <input type="file" id="s4_im_upl" style="display:none">
+                <input type="file" id="s4_wo_upl" style="display:none">
+            </div>
+            <button onclick="close_s6()">确定</button>
+        </div>
     </div>
     <div id="sounds">
         <audio src="assets/mp3/ccb.mp3" id="ccb1"></audio>
@@ -68,259 +87,9 @@
         <audio src="assets/mp3/wow_1.mp3" id="wow_1"></audio>
         <audio src="assets/mp3/wow_2.mp3" id="wow_2"></audio>
         <audio src="assets/mp3/fail.mp3" id="fail"></audio>
+        <audio src="assets/mp3/wcsndm.mp3" id="wcsndm"></audio>
     </div>
 </body>
-<script>
-    const app_date = "2024/8/11",app_name = "ccb-simulator",app_ver = "0.0.3"
-    const app = document.getElementById("ccb_app")
-    const screen1 = document.getElementById("ccb_screen_1")
-    const screen2 = document.getElementById("ccb_screen_2")
-    const screen3 = document.getElementById("ccb_screen_3")
-    const screen4 = document.getElementById("ccb_screen_4")
-    const screen5 = document.getElementById("ccb_screen_5")
-    const progress = document.getElementById("ccb_noti_progress")
-    const clt_2bt = document.getElementById("clt_2bt")
-    const play_ccb = document.getElementById("play_ccb")
-    const cmt = document.getElementById("ccb_mode_title")
-    app.style = ""
-    screen1.style = ""
-    let ccb_started,ccb_evl1,cb_count=0,first_click_time,last_click_time,score=0,tps,cb_allow,cmi,ptm1,ptm2
-    let ccb_game_mode,ccb_cm_level,last10click=[],ccb_lc_doubt=0
-    document.body.addEventListener("contextmenu", (e) => {
-        e.preventDefault();
-    })
-    function play() {
-        document.getElementById("pic_forload").style.display = "none"
-        screen1.style.display = "none"
-        screen2.style.display = ""
-        const img = document.getElementById("screen2_img")
-        img.src = "assets/webp/scene_1.webp"
-        document.getElementById("story1").play()
-        ptm1 = setTimeout(()=>{
-            img.src = "assets/webp/scene_2.webp"
-        },3600)
-        ptm2 = setTimeout(()=>{
-            ccb_start()
-        },11000)
-    }
-    function play_ccb_sound() {
-        document.getElementById("ccb1").currentTime = 0
-        document.getElementById("ccb1").play()
-    }
-    function ccb_start() {
-        clearTimeout(ptm1)
-        clearTimeout(ptm2)
-        if (ccb_started) {
-            return
-        }
-        ccb_started = 1
-        document.getElementById("story1").pause()
-        document.getElementById("story2").play()
-        screen2.style.display = "none"
-        screen3.style.display = ""
-        const img = document.getElementById("screen3_img")
-        let a = setInterval(()=>{
-            img.src = "assets/webp/elep_1.webp"
-            setTimeout(()=>{
-                img.src = "assets/webp/elep_2.webp"
-            },100)
-        },200)
-        setTimeout(()=>{
-            img.style = "left:calc(var(--ccb_font_size)*4)"
-        },50)
-        setTimeout(()=>{
-            document.getElementById("cnp_txt").innerText = "点击屏幕！"
-            document.getElementById("ccb_noti_title").style = "display:block"
-        },3500)
-        setTimeout(()=>{
-            clearInterval(a)
-            img.style = "left:calc(var(--ccb_font_size)*100);bottom:calc(var(--ccb_font_size)*360)"
-        },4000)
-        setTimeout(()=>{
-            ccb_main()
-        },4400)
-    }
-    function ccb_main() {
-        cb_allow = 1
-        screen3.style.display = "none"
-        screen4.style.display = ""
-        progress.style.display = ""
-        progress.value = 100
-        const img = document.getElementById("screen4_elp")
-        setTimeout(()=>{
-            img.style = "bottom:0px"
-        },50)
-        ccb_evl1 = document.body.addEventListener("click",ccb_click)
-        cmi = setInterval(()=>{
-            progress.value = progress.value - 1
-            if (progress.value <= 0) {
-                over()
-            }
-        },10)
-    }
-    function changecmil(ms,num) {
-        clearInterval(cmi)
-        cmi = setInterval(()=>{
-            progress.value = progress.value - (num || 1)
-            if (progress.value <= 0) {
-                over()
-            }
-        },ms)
-    }
-    function ccb_click() {
-        if (!cb_allow) {
-            return
-        }
-        if (!first_click_time) {
-            first_click_time = Date.now()
-            last_click_time = Date.now()
-            scorec(5)
-        } else {
-            let tm = Math.pow(last_click_time-Date.now()+1000,2)
-            if (ccb_game_mode == 1) {
-                lct_value_ev()
-            }
-            last_click_time = Date.now()
-            scorec(Math.ceil(tm/200000))
-            tps = Math.floor(cb_count/(last_click_time - first_click_time)*10000)/10
-            document.getElementById("cet_txt3").innerText = "CPS: "+tps
-        }
-        document.getElementById("cet_txt2").innerText = "CCB: "+score
-        const img = document.getElementById("screen4_elp")
-        const wow = document.getElementById("screen4_wow")
-        img.style.transition = "none"
-        gen_audio_el("assets/mp3/wow_1.mp3")
-        wow.style = "display:block;transition:none"
-        setTimeout(()=>{
-            wow.style = "display:block;width:calc(var(--ccb_font_size)*25);left:calc(var(--ccb_font_size)*-7);bottom:calc(var(--ccb_font_size)*-4)"
-        },5)
-        cb_count++
-        document.getElementById("cnp_txt").innerText = "踩背次数："+cb_count
-        progress.value += 40
-        if (ccb_game_mode == 1) {
-            if (score > 2500) {
-                if (ccb_cm_level != 3) {
-                    ccb_cm_level = 3
-                    genscorec_text("2500分！加速x4！",1)
-                    changecmil(10,4)
-                }
-            } else if (score > 1000) {
-                if (ccb_cm_level != 2) {
-                    ccb_cm_level = 2
-                    genscorec_text("1000分！加速x3！",1)
-                    changecmil(10,3)
-                }
-            } else if (score > 500) {
-                if (ccb_cm_level != 1) {
-                    ccb_cm_level = 1
-                    genscorec_text("500分！加速x2！",1)
-                    changecmil(10,2)
-                }
-            }
-        }
-    }
-    function gen_audio_el(url,removeafter) {
-        const el = document.createElement("audio")
-        el.src = url
-        document.body.appendChild(el)
-        el.play()
-        setTimeout(()=>{
-            document.body.removeChild(el)
-        },(removeafter || 1000))
-    }
-    function over() {
-        cb_allow = 0
-        clearInterval(cmi)
-        document.body.removeEventListener("click",ccb_click)
-        document.getElementById("ccb_noti_title").style = "display:none"
-        if (cb_count) {
-            document.getElementById("cet_txt").innerText = "您一共踩了"+cb_count+"次背！"
-            document.getElementById("wow_2").play()
-        } else {
-            document.getElementById("cet_txt").innerText = "踩背失败！"
-            document.getElementById("screen4_elp").style = "left:calc(var(--ccb_font_size)*100)"
-            document.getElementById("fail").play()
-        }
-        setTimeout(()=>{
-            screen4.style.display = "none"
-            screen5.style.display = ""
-        },1000)
-    }
-    function scorec(value) {
-        score += value
-        genscorec_text("+"+value)
-    }
-    function genscorec_text(str,type) {
-        const ss = document.createElement("span")
-        ss.className = "score_show"
-        let ss_time = 500
-        if (type) {
-            ss.classList.add("slow")
-            ss_time = 2000
-        }
-        ss.innerText = str
-        document.body.appendChild(ss)
-        setTimeout(()=>{
-            document.body.removeChild(ss)
-        },ss_time)
-    }
-    function reset() {
-        screen5.style.display = "none"
-        screen1.style.display = ""
-        clt_2bt.style.display = "none"
-        play_ccb.style.display = ""
-        ccb_started=ccb_evl1=first_click_time=last_click_time=tps=cb_allow=cmi=null
-        cb_count=score=ccb_cm_level=ccb_lc_doubt=0
-        last10click=[]
-        document.getElementById("screen3_img").style = ""
-        document.getElementById("screen4_elp").style = ""
-        document.getElementById("screen4_wow").style = ""
-        document.getElementById("cet_txt").innerText = ""
-        document.getElementById("cet_txt2").innerText = ""
-        document.getElementById("cet_txt3").innerText = ""
-        document.getElementById("story1").currentTime = 0
-        cmt.innerText = ""
-    }
-    function play0() {
-        clt_2bt.style.display = ""
-        play_ccb.style.display = "none"
-    }
-    function play1() {
-        ccb_game_mode = 0
-        cmt.innerText = "经典模式"
-        play()
-    }
-    function play2() {
-        ccb_game_mode = 1
-        cmt.innerText = "挑战模式"
-        play()
-    }
-    function lct_value_ev() {
-        if (last10click.length < 10) {
-            last10click[last10click.length] = Date.now() - last_click_time
-        } else {
-            last10click.shift()
-            last10click[9] = Date.now() - last_click_time
-            let l1c_avg = 0,l1c_diff = 0
-            for (i=0;i<10;i++) {
-                l1c_avg += last10click[i]/10
-            }
-            for (i=0;i<10;i++) {
-                l1c_diff += Math.abs(last10click[i] - l1c_avg)
-            }
-            if (l1c_diff < 50) {
-                ccb_lc_doubt++
-                if (ccb_lc_doubt > 5) {
-                    over()
-                    document.getElementById("cet_txt").innerText = "你是不是开了！？"
-                    console.log("挑战模式还想作弊？呵呵！")
-                }
-            } else {
-                if (ccb_lc_doubt > 0) {
-                    ccb_lc_doubt = 0
-                }
-            }
-        }
-    }
-    console.log(`${app_name} version ${app_ver}. Last updated ${app_date}.`)
-</script>
+<script src="index.js"></script>
+<script>var site="ccb_simu"</script>
+<script src="https://wzq02.top/scripts/beacon/core.min.js"></script>
