--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                     <button id="play_ccb3" onclick="show_s6()" style="display:none">换贴图</button>
                 </div>
             </div>
+            <div id="us_notify" style="position:absolute;top:0px;right:0px;font-size:16px;display:none">
+                <a style="color:#fff" href="www_script/index.user.js">在你冲浪的任何网站上踩踩背！</a>
+            </div>
         </div>
         <div id="ccb_screen_2" style="display:none">
             <button id="skip_story" onclick="ccb_start()">跳过剧情</button>
