--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <audio src="assets/mp3/wow_2.mp3" id="wow_2"></audio>
         <audio src="assets/mp3/fail.mp3" id="fail"></audio>
         <audio src="assets/mp3/wcsndm.mp3" id="wcsndm"></audio>
-        <audio src="assets/opus/bgm.opus" id="bgm"></audio>
+        <audio src="assets/opus/bgm.opus" id="bgm" loop="1"></audio>
     </div>
 </body>
 <script src="index.js"></script>
