--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <div id="ccb_noti">
             <div id="ccb_noti_title" style="display:none">
                 <progress id="ccb_noti_progress" max="100" style="display:none"></progress><br>
-                <span id="cnp_txt"></span>
+                <span id="cnp_txt"></span><br>
+                <span id="cnp2_txt" style="display:none">要使用键盘踩背，请轮流按下键盘上的“<kbd>C</kbd>”和“<kbd>B</kbd>”按键！</span>
             </div>
             <div id="ccb_mode_title"></div>
         </div>
